# ZED_SVO2_Extractor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/: copilot-instructions.md
apps/frame_extractor/: CMakeLists.txt  frame_extractor_cli.cpp
apps/gui_extractor/: CMakeLists.txt  gui_application.cpp  gui_application.hpp  main.cpp
apps/video_extractor/: CMakeLists.txt  video_extractor_cli.cpp
common/: CMakeLists.txt  error_handler.cpp  error_handler.hpp  extraction_engine.cpp  extraction_engine.hpp  file_utils.cpp  file_utils.hpp  metadata.cpp  metadata.hpp  output_manager.cpp  output_manager.hpp  svo_handler.cpp  svo_handler.hpp
docs/: CODE_STYLE_GUIDE.md  CPP_LEARNING_GUIDE.md  DEPENDENCY_SETUP.md  DEPTH_ITERATION_PLAN.md  DEPTH_VISUALIZATION.md  ENVIRONMENT_STATUS.md  GIT_WORKFLOW.md  IMPLEMENTATION.md  PHASE_0_COMPLETE.md  POST_WIPE_CHECKLIST.md  ROADMAP.md
scripts/: bootstrap-dev.ps1
src/: main.cpp
